# src/model/framinoModel.ts
@@ -27,7 +27,6 @@ export class Nft {
 }
 
 export interface DonateRequest {
-    recipient: string;
     amount: string; // USDC amount as string, e.g. "1.5"
 }
 
